--- a/style.css
+++ b/style.css
@@ -3,17 +3,52 @@ body{
     justify-content: center;
 
 }
+button{
+    background-color: #c2fbd7;
+    border-radius: 20px;
+    box-shadow: rgba(44, 187, 99, .2) 0 -25px 18px -14px inset,rgba(44, 187, 99, .15) 0 1px 2px,rgba(44, 187, 99, .15) 0 2px 4px,rgba(44, 187, 99, .15) 0 4px 8px,rgba(44, 187, 99, .15) 0 8px 16px,rgba(44, 187, 99, .15) 0 16px 32px;
+    color: green;
+    cursor: pointer;
+    display: inline-block;
+    font-family: CerebriSans-Regular,-apple-system,system-ui,Roboto,sans-serif;
+    padding: 7px 20px;
+    text-align: center;
+    text-decoration: none;
+    transition: all 250ms;
+    border: 0;
+    font-size: 16px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+
+    
+}
+button:hover {
+    box-shadow: rgba(44,187,99,.35) 0 -25px 18px -14px inset,rgba(44,187,99,.25) 0 1px 2px,rgba(44,187,99,.25) 0 2px 4px,rgba(44,187,99,.25) 0 4px 8px,rgba(44,187,99,.25) 0 8px 16px,rgba(44,187,99,.25) 0 16px 32px;
+    transform: scale(1.05) rotate(-1deg);
+  }
+#calculater{
+
+    background-color: beige;
+    border-radius: 10px;
+    height: 265px;
+    padding-top: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
+    box-shadow: 2px 1px 30px black;
+}
 #Label{
     display: flex;
-    width: 150px;
+    width: 200px;
     height: 30px;
-    background-color: antiquewhite;
+    background-color: rgb(255, 210, 150);
     font-family: Arial, Helvetica, sans-serif;
     font-weight: 800;
     justify-content: end;
     align-items: flex-end;
 
     border-radius: 8px;
+    padding-right: 10px;
 
    
 }
@@ -37,7 +72,7 @@ body{
 }
 #Clear-button{
    
-    width: 55%;
+    width: 67%;
 
 }
 #button-zero
